# Enhanced-Task-Management-System

./: .replit  DEPLOYMENT_READINESS_REPORT.md  README.md  auth.py  crud.py  database.py  main.py  models.py  notifications.py  pyproject.toml  replit.md  requirements.txt  schemas.py  tasks.db  test_comprehensive.py  test_main.py
attached_assets/: Pasted--Week-1-Backend-Development-Python-FastAPI-SQL-Step-1-Create-Project-Install-Dependenc-1755640977110_1755640977112.txt  Pasted--Week-2-Frontend-Development-Python-Only-No-JS-Step-1-Install-Dependencies-pip-install-jinj-1755641176916_1755641176919.txt  Pasted--Week-3-Advanced-Features-Final-Polishing-Python-only-1-Authentication-Register-Login-We-1755641297733_1755641297734.txt  Pasted--Week-4-Collaboration-Real-time-Notifications-Python-only-1-Database-Schema-Update-We-ll-a-1755641434776_1755641434776.txt  Pasted--Week-5-Analytics-Reporting-Python-only-1-Backend-Enhancements-Analytics-Endpoints-We-ll-1755641800581_1755641800583.txt  Pasted-2-Final-Enhancements-Dark-Mode-Toggle-Add-to-base-html-button-id-darkToggle-class-btn-btn-1755642262932_1755642262934.txt
static/: sw.js
templates/: analytics.html  auth.html  base.html  detail.html  form.html  index.html  notifications.html  share_task.html  shared_tasks.html
